<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        app:layout_constraintBottom_toBottomOf="@+id/logoImageView"
        app:layout_constraintStart_toEndOf="@+id/logoImageView"
        app:layout_constraintTop_toTopOf="@+id/logoImageView" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logoImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="32dp"
        android:src="@drawable/apple_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/search_for_a"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImageView" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_rounded_background"
        android:ems="10"
        android:hint="@string/Enter_search_name"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_dess"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif"
        android:text="@string/specify"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/et_search"
        app:layout_constraintStart_toStartOf="@+id/et_search"
        app:layout_constraintTop_toBottomOf="@id/et_search" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/resultsRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/searchButton"
        app:layout_constraintEnd_toEndOf="@+id/tv_dess"
        app:layout_constraintStart_toStartOf="@+id/et_search"
        app:layout_constraintTop_toBottomOf="@id/tv_dess"
        app:spanCount="4"
        tools:listitem="@layout/item_search" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/searchButton"
        app:layout_constraintEnd_toEndOf="@+id/tv_dess"
        app:layout_constraintStart_toStartOf="@+id/tv_dess"
        app:layout_constraintTop_toBottomOf="@id/tv_dess" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/searchButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_rounded_background"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/et_search"
        app:layout_constraintStart_toStartOf="@+id/et_search"
        app:layout_constraintTop_toBottomOf="@id/resultsRecyclerView" />



</androidx.constraintlayout.widget.ConstraintLayout>



<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent">-->


<!--    <ImageView-->
<!--        android:id="@+id/imageView2"-->
<!--        android:layout_width="30dp"-->
<!--        android:layout_height="30dp"-->
<!--        app:srcCompat="@drawable/apple_logo"-->
<!--        tools:layout_editor_absoluteX="60dp"-->
<!--        tools:layout_editor_absoluteY="96dp" />-->

<!--    <TextView-->
<!--        android:id="@+id/textView"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="TextView"-->
<!--        tools:layout_editor_absoluteX="110dp"-->
<!--        tools:layout_editor_absoluteY="106dp" />-->

<!--    <TextView-->
<!--        android:id="@+id/textView2"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="TextView"-->
<!--        tools:layout_editor_absoluteX="101dp"-->
<!--        tools:layout_editor_absoluteY="206dp" />-->

<!--    <EditText-->
<!--        android:id="@+id/editTextText"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:ems="10"-->
<!--        android:inputType="text"-->
<!--        android:text="Name"-->
<!--        tools:layout_editor_absoluteX="53dp"-->
<!--        tools:layout_editor_absoluteY="279dp" />-->

<!--    <TextView-->
<!--        android:id="@+id/textView3"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="TextView"-->
<!--        tools:layout_editor_absoluteX="61dp"-->
<!--        tools:layout_editor_absoluteY="366dp" />-->
<!--</androidx.constraintlayout.widget.ConstraintLayout>-->